added abstract for EAP paper

--- a/talks/talks-2025.yml
+++ b/talks/talks-2025.yml
@@ -1,6 +1,6 @@
 - title: "Building Trust in Employee Assistance Programs among first responders: Focus groups on EAPs with police and fire personnel"
   date: 2025-07-10
-  description: "A presentation at the Work, Stress, and Health Conference on work that has since been published"
+  description: "A presentation at the Work, Stress, and Health Conference on work that is in press"
   location: Seattle
   links:
   - name: Paper
