updated homepage and research page

--- a/talks/talks-2025.yml
+++ b/talks/talks-2025.yml
@@ -1,3 +1,18 @@
+- title: "Quantifying the harm of military-related trauma on psychosocial functioning"
+  date: 2025-08-07
+  description: "A poster presentation at Atlanta VA Research Symposium at Morehouse School of Medicine"
+  location: Atlanta
+  links:
+  - name: Poster
+    url: https://drive.google.com/file/d/18PkpnNI8PJsoZ6vV4e6JRQXu_oSWv9c_/view?usp=share_link
+    icon: fa-solid fa-person-chalkboard
+  categories:
+  - Mental Health
+  - Veterans
+  - Organizational Psychology
+
+
+
 - title: "Building Trust in Employee Assistance Programs among first responders: Focus groups on EAPs with police and fire personnel"
   date: 2025-07-10
   description: "A presentation at the Work, Stress, and Health Conference on work that is in press"
