--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  command = "quarto render"
+  command = """
+  curl -fsSL https://quarto.org/download/latest/quarto-linux-amd64.deb -o quarto.deb
+  sudo dpkg -i quarto.deb
+  quarto render
+  """
   publish = "_site"
-
-[build.environment]
-  QUARTO_VERSION = "1.5.56"  # or your version
